# Tucil2_13523094

./: CMakeLists.txt  README.md
src/: main.cpp
src/modules/: algo.hpp  err_measure.hpp  imgio.cpp  imgio.hpp  quadtree.cpp  quadtree.hpp
